hide div on mobile possibly

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -788,7 +788,7 @@ Google map
 }
 @include media("<desktop") {
     .toggle-map-content {
-        display: none;
+        display: none !important;
     }
 }
 .pointer-events-none {
