--- a/sass/partials/_colors.scss
+++ b/sass/partials/_colors.scss
@@ -11,10 +11,10 @@ $txt-accent: #ACB1B4;
 $form-placeholder: #BCC1C3;
 // form placeholder text
 // Global colours
-$accent-color: #e8ca6f;
+$accent-color: #F4B0AD;
 // global accent colour
-$accent-color-hover: #d3b56a;
-// global accent colour hover
+$accent-color-hover: #F79591;
+// global accent colour hoverzf
 $white-color: #fff;
 $black-color: #000;
 // Typography colours
