--- a/sass/partials/_colors.scss
+++ b/sass/partials/_colors.scss
@@ -1,7 +1,7 @@
 // Colours partial
 
 // Text colours
-$txt-primary: rgba(28, 54, 83, 0.6);
+$txt-primary: rgba(28, 54, 83, 1);
 // body font
 $txt-secondary: #3D4351;
 // heading font
@@ -11,10 +11,10 @@ $txt-accent: #ACB1B4;
 $form-placeholder: #BCC1C3;
 // form placeholder text
 // Global colours
-$accent-color: #F4B0AD;
+$accent-color: #BDD5E7;
 // global accent colour
-$accent-color-hover: #F79591;
-// global accent colour hoverzf
+$accent-color-hover: #9ABDDC;
+// global accent colour hover
 $white-color: #fff;
 $black-color: #000;
 // Typography colours
