--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -294,7 +294,8 @@ Hero
 }
 .fixed {
   position: fixed;
-  background-color: rgba(249, 210, 204, .88);
+  color: black !important;
+  background-color: rgba(189, 213, 231, .88);
   z-index: 999;
   width: 100%;
 }
